[Task 12] Created table with simple info

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: rgb(253 , 251 , 251);
-  font-family: verdana, arial;
+  font-family: verdana, sans-serif;
   margin: 0;
 }
 
