--- a/style.css
+++ b/style.css
@@ -60,8 +60,8 @@ ul {
   margin-left: auto;
   margin-right: auto;
   border-radius: 20px;
-  background-color: rgba(66, 66, 66);
-  box-shadow: 20px 15px 10px rgb(56, 56, 56);
+  background-color: rgb(66 , 66 , 66);
+  box-shadow: 20px 15px 10px rgb(56 , 56 , 56);
 }
 
 #minha_foto {
