Req. 2: Recarregando 9. Req. 3: Carregando

--- a/style.css
+++ b/style.css
@@ -3,9 +3,11 @@
 }
 
 #cabecalho {
-  text-align: center;
   background-color: forestgreen;
   top: unset;
+}
+#titulo {
+  text-align: center;
 }
 
 body {
