--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-a{
+a {
   text-decoration: none;
 }
 
@@ -7,32 +7,35 @@ a:hover {
   color: rgb(132 , 169 , 140);
 }
 
-aside{
-  box-shadow: 5px 5px 15px rgb(57, 156, 107);
+aside {
+  box-shadow: 5px 5px 15px rgb(57 , 156 , 107);
   padding: 10px 10px;
   width: 30%;
   float: right;
-  border-left: 1px solid rgb(57, 156, 107);
-  border-top: 1px solid rgb(57, 156, 107);
+  border-left: 1px solid rgb(57 , 156 , 107);
+  border-top: 1px solid rgb(57 , 156 , 107);
 }
 
 body {
-  padding: 120px 0 0 ;
+  padding: 120px 0 0;
   background-color: rgb(253 , 251 , 251);
   color: rgb(74 , 78 , 105);
   margin: 0;
 }
-#breve{
-    font-size:1.2em;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+#breve {
+  font-size: 1.2em;
+  font-family: Lucida Sans, Lucida Sans Regular, Lucida Grande, 
+  Lucida Sans Unicode, Geneva, Verdana, sans-serif;
 }
+
 footer {
-  color:rgb(0 , 0 , 0);
-  font-family:'Courier New', Courier, monospace;
-  font-size:.8em;
-  text-align:right;
-  float:right;
-  width:100%;
+  color: black;
+  font-family: 'Courier New', Courier, monospace;
+  font-size: 0.8em;
+  text-align: right;
+  float: right;
+  width: 100%;
 }
 
 header {
@@ -53,18 +56,18 @@ h2 {
   text-align: center;
 }
 
-h2::before {
+h2:before {
   display: block;
-  content: " ";
+  content: ' ';
   margin-top: -55px;
   height: 55px;
   visibility: hidden;
   pointer-events: none;
 }
 
-a::before {
+a:before {
   display: block;
-  content: " ";
+  content: ' ';
   margin-top: -95px;
   height: 95px;
   visibility: hidden;
@@ -72,19 +75,19 @@ a::before {
   }
 
 .lado-esquerdo {
-  float:left;
+  float: left;
   width: 20%;
 }
 
 .lado-direito {
-  float:right;
-  width:80%;
+  float: right;
+  width: 80%;
 }
 #minha_foto {
   border-radius: 150px;
-  margin:auto;
-  display:block;
-  max-width:50%;
+  margin: auto;
+  display: block;
+  max-width: 50%;
 }
 
 .navbar {
