--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
 body {
-    background-color: rgb(253, 251, 251);
+    background-color: rgb(253, 251, 251); 
+    margin: 0;
+    padding: 0;
+}
+
+#cabecalho {
+    background-color: rgb(51, 207, 119);
+    position: fixed;
+    top: 0px;
+    width: 100%;
+}
+#titulo {
+    color: white;
+    font-weight: bold;
 }
