--- a/style.css
+++ b/style.css
@@ -1,7 +1,39 @@
 body {
         background-color: rgb(253 , 251 , 251);
+        position: relative;
 }
 
 #cabecalho {
         position: fixed;
-        top: 0}
+        width: 2800px; 
+        height: 200px;
+        top: 0;
+        background-color: aquamarine;
+        border: dotted;
+}
+
+.center{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 30%;
+}
+
+#listas{
+        float:right;
+}
+
+#minhafoto{
+        size: 200px;
+}
+aside{
+        border: dotted;
+        margin: 20px 30px;  
+        
+}
+
+h1{
+        font-size: xx-large;
+        font-weight: 800;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+}
