--- a/style.css
+++ b/style.css
@@ -19,20 +19,22 @@ h1 {
 }
 
 .lado-esquerdo {
-  margin-left: 300px;
+  margin-left: 200px;
   border: solid;
   border-color: blue;
   width: 500px;
+  height: auto;
   float: left;
   padding: 10px;
   line-height: 25px;
 }
 
 .lado-direito {
-  margin-right: 300px;
+  margin-right: 200px;
   border: solid;
   border-color: blue;
-  width: 280px;
+  width: 500px;
+  height: auto;
   float: right;
   padding: 10px;
   line-height: 25px;
