--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body {
   background-color: rgb(253 , 251 , 251);
   font-family: Arial, Helvetica, sans-serif;
-  color: color: rgb(59, 59, 59);
+  color: rgb(59, 59, 59);
 }
 
 #cabecalho {
@@ -25,7 +25,7 @@ body {
 
 main {
   margin: auto;
-  margin-top: 100px;
+  padding-top: 120px;
   width: 80%;
 }
 
