--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body{
 }
 
 #titulo{
+  letter-spacing: 2px;
   font-family: 'Roboto Slab', serif; /* colocando font roboto do google fonts */
   color: rgb(253, 251, 251);
 }
@@ -43,13 +44,9 @@ nav a{ /*selecionando as tags "a" do container "nav"*/
   border: 1px solid rgb(253, 251, 251); /*adicionando borda em todos os lados */
   border-radius: 30px; /*encurvando a borda em 30px*/
   padding: 10px; /*espaçamento interno do texto até a borda*/
-  transition: 0.5s;
 }
 
-nav a:hover{
-  background-color: rgb(253, 251, 251);
-  color: #0fa5a5;
-}
+
 
 #page_content{
   padding: 25px;
@@ -61,6 +58,11 @@ nav a:hover{
 main{
   width: 80%;
   margin-right: 30px;
+}
+
+main img{
+  margin-top: 35px;
+  border: 1px solid black;
 }
 
 .sub_title{
@@ -75,7 +77,14 @@ display: flex;
 flex-direction: row;
 }
 
-article p{
+.article_content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+article {
+  margin-top: 60px;
   text-align: center;
   margin-left: 10px;
   font-size: 20px;
@@ -84,3 +93,37 @@ article p{
 aside{
   flex: 1;
 }
+
+section{
+  letter-spacing: 1px;
+  text-align: right;
+  font-size: 16px;
+}
+
+.arct_posit{
+  text-align: right;
+}
+
+#list_content{
+  display: flex;
+  flex-direction: row;
+  margin-top: 30px;
+  margin-left: 30px;
+}
+
+#list_content h3{
+  color: #0fa5a5 ;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+#licoes_aprendidas{
+  margin-right: 70px;
+  text-align: center;
+}
+
+#licoes_a_aprender{
+  text-align: center;
+  margin-left: 70px;
+}
+
