--- a/style.css
+++ b/style.css
@@ -1,13 +1,18 @@
 body {
   background-color: rgb(253, 251, 251);
 }
+.principal {
+  background-color: rgb(226, 252, 212);
+}
 #cabecalho {
-  border: 2px solid black;
+  border: 1px solid black;
   background-color: rgb(74, 156, 74);
   position: fixed;
   top: 0px;
   text-align: center;
   font-size: 18px;
+  width: 100%;
+  height: 15%;
 }
 #titulo {
   color: whitesmoke;
@@ -16,9 +21,15 @@ body {
   margin-left: 20px;
 }
 #links-navegacao {
-  display: block;
-  margin-top: 100px;
-  font-size: 22px;
+  display: inline-block;
+  color: whitesmoke;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.imagem {
+  font-size: 20px;
+  font-weight: 400;
+  text-align: center;
 }
 #minha_foto {
   margin-top: 150px;
@@ -27,13 +38,32 @@ body {
   height: 300px;
   border-radius: 20%;
 }
+h2 {
+  max-width: 100%;
+  border-bottom: 1px solid black;
+  margin-left: 20px;
+  margin-right: 20px;
+}
 #licoes_aprendidas {
+  border: 1px solid black;
+  text-align: justify;
   float: left;
 }
 #licoes_a_aprender {
-  margin-left: 100px;
-  float: right;
+  border: 1px solid black;
+  float: left;
+}
+#conteudo-lateral {
+  background-color: rgb(74, 156, 74);
+  border: 1px solid black;
+  margin-left: 500px;
+}
+#artigo {
+  float: left;
 }
 #rodape {
-  color: black;
+  width: 100%;
+  height: 30px;
+  background-color: grey;
+  color: rgb(0, 0, 0);
 }
