--- a/style.css
+++ b/style.css
@@ -15,12 +15,12 @@ body {
   text-align: center;
 }
 
-#lado-direito {
+.lado-direito {
   float: right;
   width: 30%;
 }
 
-#lado-esquerdo {
+.lado-esquerdo {
   float: left;
   width: 70%;
 }
@@ -32,7 +32,7 @@ body {
 }
 
 table {
-    width: 100%;
-    margin: 10px 10px 20px 30px;
-    background-color: burlywood;
+  width: 100%;
+  margin: 10px 10px 20px 30px;
+  background-color: burlywood;
 }
