--- a/style.css
+++ b/style.css
@@ -1,19 +1,69 @@
-/*                                                   --- BODY ---                                                    */
 body {
     background-color: rgb( 253, 251, 251);
     margin: 0;
     padding: 0;
 }
 
-/*                                                   --- HEADER ---                                                    */
+header{
+    width: 100%;
+    position: fixed;
+    background-color: rgb(0, 87, 87);
+    top: 0;
+}
 
-/*                                                   --- MAIN ---                                                    */
+header a{
+    color: aliceblue;
+}
 
-/*                                                   --- ARTICLE ---                                                    */
+.head-container{
+    position: relative;
+    display: inline-block;
+    width: 600px;
+    text-align: center;
+    align-items: center;
+}
 
-/*                                                   --- FOOTER ---                                                    */
+.menu{
+    position: relative;
+    display: inline-block;
+    width: 100px;
+    margin-bottom: 10px;
+}
+
+#titulo{
+    position: relative;
+    margin-left: 10%;
+    width: 360px;
+    color: aliceblue;
+}
+
 footer{
     width: 100%;
-    height: 11%;
+    height: 100px;
     overflow: hidden;
+    background-color: rgb(155, 155, 155);
+}
+
+main{
+    width: 100%;
+    height: 75vh;
+    display: inline-block;
+    text-align: center;
+}
+
+#minha_foto{
+    margin-top: 10%;
+    margin-left: 45px;
+    object-fit: cover;
+}
+
+.main-name{
+    margin-top: 6px;
+    margin-left: 45px;
+}
+
+.main-description{
+    text-align: center;
+    max-width: 450px;
+    display: inline-block;
 }
