--- a/style.css
+++ b/style.css
@@ -1,33 +1,35 @@
 @font-face {
     font-family: "Bitstream Vera Serif Bold";
     src: url("https://mdn.mozillademos.org/files/2468/VeraSeBd.ttf");
-  }
+}
+
 body {
-    background-color: rgb(253,251,251);
+    background-color: rgb(253 ,251 ,251 );
     margin:0;
 }
+
 header {
     background-color: black;
 }
+
 #cabecalho {
     width: 100%;
     height: 80px;
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
     position: fixed;
 }
+
 #titulo {
     font-size:40px;
     font-family: monospace;
     background-color: black;
 }
+
 main {
     background-color: violet;
     margin-top: 100px;
     font-family: monospace;
 }
+
 #passagem {
     background-color: tomato;
 }
@@ -35,35 +37,44 @@ main {
 #artigo {
     background-color: purple;
 }
+
 aside {
     float: right;
     width: 30%;
 }
+
 .side {
     float: right;
     background-color: darkblue;
 }
+
 #minha_foto {
     float: left;
     width: 60%;
 }
+
 #textside {
     float: right;
 }
+
 section {
     background-color: cyan;
 }
+
 footer {
     background-color:red;
     margin-top: 55px;
 }
+
 #gitlogo {
     max-width: 10%;
     margin-bottom: 50px;
     margin-left: 50px;
 }
+
 #linkedinlogo {
     max-width: 10%;
     margin-bottom: 41px;
     margin-left: 40px;
 }
+
