--- a/style.css
+++ b/style.css
@@ -3,17 +3,41 @@ body {
   font-family: Segoe UI, Tahoma, Geneva, Verdana, sans-serif;
   font-size: 18px;
   line-height: 30px;
-  margin: 30px;
+  margin: 10px 10px;
   padding: 10px;
   color: rgb(37 , 37 , 37);
 }
 
+header {
+  background-color: darkcyan;
+  width: 100%;
+}
+
 h1 {
   color: rgb(37 , 37 , 37);
+  text-align: center;
+  color: antiquewhite;
+}
+
+li a {
+  background-color: darkcyan;
+  color: antiquewhite;
+  text-decoration: none;
+  padding: 15px;
+}
+
+a:hover {
+  background-color: rgb(8, 124, 124);
+  color: antiquewhite;
+}
+
+#minha_foto {
+  border-radius: 50%;
+  margin-left: 40%;
+  margin-top: 10%;
 }
 
 .aprendidas {
-  background-color: rgb(255 , 155 , 255);
   display: block;
   float: left;
   width: 40%;
@@ -21,7 +45,6 @@ h1 {
 }
 
 .aprender {
-  background-color: rgb(144 , 255 , 255);
   display: block;
   float: right;
   width: 50%;
@@ -49,4 +72,16 @@ h1 {
 
 .artigo {
   padding: 10px 30px;
+}
+
+footer {
+  background-color: rgb(8, 124, 124);
+  width: 100%;
+  clear: both;
+}
+
+.link {
+  color: antiquewhite;
+  text-decoration: none;
+  margin-bottom: 20px;
 }
