--- a/style.css
+++ b/style.css
@@ -21,18 +21,51 @@ footer, nav {
   margin: 0 auto;
   width: 100%;
   text-align: center;
-  border-bottom: 1px gray solid;;
+  border-bottom: 1px gray solid;
+  z-index:10;
 }
 
-#minha_foto {
+li a {
+  text-decoration: none;
+  color: white;
+}
+
+nav {
+  background-color: grey;
+  position: fixed;
+  top: 90px;
+  width: 100%;
+  z-index: 11;
+}
+
+nav ul li {
+  display: inline-block;
+  margin-left: 30px;
+  height: 20px;
+  font-size: 17px;
+}
+
+nav ul {
+  text-align: center;
+}
+
+main {
   position: relative;
-  top: 120px;
+  top: 180px;
+}
+
+#licoes_aprendidas, #licoes_a_aprender {
+    display: inline-block
 }
 
 footer {
   position: relative;
   bottom: 0;
+  top: 250px;
   background-color: #d3d3d3;
   padding: 10px;
+}
 
+#rodape {
+  width: 100vw;
 }
