--- a/style.css
+++ b/style.css
@@ -3,11 +3,14 @@ body {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
 #cabecalho {
-  margin-top: 0px;
+  position: fixed;
+  width: 98%;
 }
 header {
   background-color: #32bf84;
   padding: 10px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
 }
 #titulo {
   color: white;
@@ -17,6 +20,7 @@ header {
 }
 
 #minha_foto {
+  margin-top: 180px;
   height: 200px;
   border-radius: 20px;
 }
