--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ footer {
   margin-bottom: 10px;
   background-color: white;
   padding: 0;
+  padding-top: 20px;
 }
 
 .side-article {
@@ -68,4 +69,8 @@ a {
   padding-right: 22px;
   padding-top: 20px;
   padding-bottom: 100px;
+}
+
+li {
+  line-height: 30px;
 }
