--- a/style.css
+++ b/style.css
@@ -4,12 +4,16 @@ body {
   font-size: 20px;
   line-height: 30px;
   color: rgb(39 , 42 , 45);
+  margin: 0;
 }
 
 #cabecalho {
   position: fixed;
   top: 0;
-  background-color: rgb(85 , 91 , 110);
+  background-color: rgb(35 , 37 , 32);
+  width: 100%;
+  text-align: center;
+  padding-top: 10px;
 }
 
 #titulo {
@@ -18,11 +22,30 @@ body {
 
 #apresentacao {
   margin-top: 100px;
+  text-align: center;
+  line-height: 10px;
 }
 
 #minha_foto {
   height: 280px;
-  border-radius: 15px 50px;
+  border-radius: 50%;
+}
+
+#links {
+  font-size: 18px;
+}
+
+a:link {
+  color: rgb(35 , 37 , 32);
+  }
+  
+a:visited {
+  color: rgb(35 , 37 , 32);
+  }
+
+#aprendizados {
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 #licoes {
@@ -40,4 +63,20 @@ h3 {
 
 #rodape {
   font-size: 13px;
+  margin-left: 15px;
+  margin-right: 15px;
+
+}
+
+#licoes_aprendidas {
+  float: left;
+}
+
+#licoes_a_aprender {
+  display: inline-block;
+}
+
+#artigo {
+  margin-left: 15px;
+  margin-right: 15px;
 }
