--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@ body {
 #minha_foto {
   height: 280px;
   border-radius: 50%;
+  margin-top: 20px;
+  margin-bottom: 5px;
 }
 
 #links {
@@ -65,18 +67,17 @@ h3 {
   font-size: 13px;
   margin-left: 15px;
   margin-right: 15px;
-
 }
 
-#licoes_aprendidas {
+.lado-esquerdo {
   float: left;
 }
 
-#licoes_a_aprender {
-  display: inline-block;
+.lado-direito {
+  display:inline-block;
 }
 
 #artigo {
-  margin-left: 15px;
-  margin-right: 15px;
-}
+    margin-left: 15px;
+    margin-right: 15px;
+  }
