--- a/style.css
+++ b/style.css
@@ -6,14 +6,47 @@ body{
 #cabecalho{
     position: fixed;
     top:0;
-    background-color: blue;
     width: 1366px;
-    height: 120px;
-    background-image: url(https://media-exp1.licdn.com/dms/image/C4D16AQFAIGGCs46Usw/profile-displaybackgroundimage-shrink_200_800/0/1605055783411?e=1611792000&v=beta&t=Vtgn2BCmhr7V0vk_KCPN7bX96fdJja9F8GJg4V9OzrU);
-    background-position: center;
+    height: 160px;
+    background-image: url(https://lh3.googleusercontent.com/eNK4w8Qu02-rKY3pdb0NmD2WJLuC_LE7tntdkrDBCbF040PiwHUdqYNMCLt5Ypj_Gpv4lG8=w16383);
+    background-position: 332px;
+    background-size: 70%;
     color: white;
     
 }
 #cabecalho h1{
-    margin: 60px 0 auto 30px;
+    font-size: 50px;
+    margin-left: 224px;
+    margin-top: 49px
 }
+article{display: inline-block;
+    width: 40%;
+    vertical-align: top;
+    margin: 10px;
+}
+#licoes{display:inline-block;
+width: 40%;
+margin:10px;
+}
+#apresentacao{
+    margin-top: -139px;
+    margin-left: 30px;
+    text-align: center;
+    width: 168px;
+}
+#apresentacao h2{
+    margin:0;
+}
+#apresentacao p{
+    margin:-5px;
+}
+#minha_foto{
+    border-radius: 100px;
+    height: 100px;
+}
+aside{
+    display: inline-block;
+    width: 15%;
+    vertical-align: top;
+}
+main{margin-top: 160px;}
