--- a/style.css
+++ b/style.css
@@ -2,3 +2,15 @@ body {
   background-color: rgb(253 , 251 , 251);
 
 }
+
+#cabecalho {
+    background-color: rgb(42, 99, 143);
+    position: fixed;
+    width:100%;
+    color: white;
+    top: 0px;
+       
+}
+#titulo {
+    text-align: center;
+}
