--- a/style.css
+++ b/style.css
@@ -1,20 +1,23 @@
 body {
-  background-color: rgb(253 ,251, 251);
-  margin-left: 3%;
+  background-color: rgb(253,251,251);
+  margin: 0% 5% 0% 5%;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-style: normal;
+
 }
 
 #cabecalho {
-  position: fixed;
   top: 0;
+  border: 2px solid #0fa36b;
+  background-color: #0fa36b;
+  text-align: center;
 }
 
 #minha_foto {
   width: 250px;
   border: 3px solid black;
   border-radius: 50%;
-  margin-top: 8%;
+  margin-top: 2%;
 }
 
 .list {
@@ -22,8 +25,11 @@ body {
 }
 
 #rodape {
-  background-color: aqua;
-  margin-bottom: -100%;
+  background-color: #0fa36b;
+  text-align: center;
+  position: absolute;
+  width: 90%;
+  
 }
 
 #licoes_aprendidas {
@@ -37,7 +43,9 @@ body {
 
 #section {
   clear: both;
+  padding: 2px;
 }
+
 article {
   clear: both;
 }
