--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 body{
-    /* https://fonts.google.com/   |  url das fontes.*/
     background-color: rgb(253, 251, 251);
     font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
     margin: 0px;
+    color: black;
+    line-height: 20px;
 }
 
 #cabecalho{
@@ -35,8 +37,16 @@ body{
     text-align: center;
     overflow: auto;
     float: left;
-    width: 55%;
-    height: 300px;
+    height: 120px;
+    max-width: 800px;
+}
+
+#aside_breve_passagem{
+    text-align: center;
+    float: right;
+    overflow: auto;
+    height: 120px;
+    max-width: 250px;
 }
 
 .listas{
@@ -54,7 +64,7 @@ body{
 }
 
 #navegacao{
-    background-color: #14213D;
+    background-color: #FCA311;
     text-align: center;
 }
 
@@ -71,7 +81,7 @@ body{
     background-color: #FCA311;
     padding: 2px;
     top: 1em;
-    left: 45%;
+    left: 5%;
     position: relative;
 }
 
@@ -97,20 +107,22 @@ body{
     overflow: auto;
 }
 
-#aside_breve_passagem{
-    float: right;
-    width: 22%;
-    height: 300px;
-}
-
 #rodape{
     clear: both;
     text-align: center;
     background-color: #FCA311;
-    height: 50px;
 }
 
 .links_logos{
     object-fit: cover;
     padding: 10px;
+}
+
+.style_link{
+    text-decoration: #FCA311;
+    color: #FCA311;
+}
+
+.style_link:hover{
+    color: #E5E5E5;
 }
