--- a/style.css
+++ b/style.css
@@ -1,80 +1,85 @@
-@font-face {
-    font-family: "Bitstream Vera Serif Bold";
-    src: url("https://mdn.mozillademos.org/files/2468/VeraSeBd.ttf");
+ body {
+  background-color: rgb(253 ,251 ,251 );
+  margin:0;
 }
 
-body {
-    background-color: rgb(253 ,251 ,251 );
-    margin:0;
+ header {
+  background-color: black;
 }
 
-header {
-    background-color: black;
+ #cabecalho {
+  width: 100%;
+  height: 80px;
+  position: fixed;
+  top: 0;
 }
 
-#cabecalho {
-    width: 100%;
-    height: 80px;
-    position: fixed;
+ #titulo {
+  font-size: 40px;
+  font-family: monospace;
+  background-color: black;
 }
 
-#titulo {
-    font-size:40px;
-    font-family: monospace;
-    background-color: black;
+ main {
+  background-color: violet;
+  margin-top: 100px;
+  font-family: monospace;
 }
 
-main {
-    background-color: violet;
-    margin-top: 100px;
-    font-family: monospace;
+ #passagem {
+  background-color: tomato;
 }
 
-#passagem {
-    background-color: tomato;
+ #artigo {
+  background-color: purple;
 }
 
-#artigo {
-    background-color: purple;
+ aside {
+  float: right;
+  width: 30%;
 }
 
-aside {
-    float: right;
-    width: 30%;
+ .side {
+  float: right;
+  background-color: darkblue;
 }
 
-.side {
-    float: right;
-    background-color: darkblue;
+ #minha_foto {
+  float: left;
+  width: 60%;
 }
 
-#minha_foto {
-    float: left;
-    width: 60%;
+ #textside {
+  float: right;
 }
 
-#textside {
-    float: right;
+ section {
+  background-color: cyan;
 }
 
-section {
-    background-color: cyan;
+ footer {
+  background-color: rgb(175 , 207 , 255 );
+  margin-top: 55px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-top: 10px solid rgba(205 ,207 ,210 , .7);
+  clear: both;
+  padding-top: 24px;
+  margin-top: 24px;
+  margin-left: 20px;
+  margin-right: 20px;
+    
 }
 
-footer {
-    background-color:red;
-    margin-top: 55px;
+ #gitlogo {
+  max-width: 10%;
+  margin-bottom: 50px;
+  margin-left: 50px;
 }
 
-#gitlogo {
-    max-width: 10%;
-    margin-bottom: 50px;
-    margin-left: 50px;
-}
-
-#linkedinlogo {
-    max-width: 10%;
-    margin-bottom: 41px;
-    margin-left: 40px;
+ #linkedinlogo {
+  max-width: 10%;
+  margin-bottom: 41px;
+  margin-left: 40px;
 }
 
