--- a/style.css
+++ b/style.css
@@ -111,6 +111,8 @@ body{
     clear: both;
     text-align: center;
     background-color: #FCA311;
+    position: relative;
+    top: 5em;
 }
 
 .links_logos{
