--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 body {
-  background-color: rgb(253 , 251 , 251);
+    background-color: rgb(253 , 251 , 251);
 
 }
 
 #cabecalho {
-    background-color: rgb(42, 99, 143);
+    background-color: rgb(42 , 99 , 143);
     position: fixed;
-    width:100%;
+    width: 100%;
     color: white;
-    top: 0px;
-       
+    top: 0;   
 }
+
 #titulo {
     text-align: center;
 }
