--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ main {
     position: absolute;
     background-color: black;
     width: 60%;
-    height: 47%;
+    height: 50%;
     top: 10%;
     left: 1%;
     padding: 2%;
@@ -36,15 +36,26 @@ main {
 }
 
 #aprendidas {
-    position: absolute;
-    background-color: green;
-    width: 40%;
-    height: 30%;
-    bottom: 5%;
-    left: 1%;
-    text-align: center;
+    position: relative;
+    color: white;
+    width: 50%;
+    left: 10%;
+    margin-top: -20px;
+    padding-top: 0;
+    text-align: left;
 }
 
-#licoes_aprendidas {
-    columns: 2;
+.icon {
+    float: right;
+    position: relative;
+    overflow: clip;
+    border-radius: 100%;
+    height: 25px;
+    margin: 0;
+    right: 10%;
+}
+
+li {
+    text-align: left;
+    margin: 9px;
 }
