--- a/style.css
+++ b/style.css
@@ -1,130 +1,130 @@
-body{
+body{ 
     background-color: rgb(253, 251, 251);
     font-family: 'Montserrat', sans-serif;
     font-size: 14px;
-    margin: 0px;
+    margin: 0;
     color: black;
-    line-height: 20px;
+    line-height: 20px; 
 }
 
-#cabecalho{
+#cabecalho{ 
     position: fixed;
     top: 0px;
     height: 6em;
-    background-color: #FCA311;
+    background-color: #fca311;
     width: 100%;
-    z-index: 2;
+    z-index: 2; 
 }
 
-#perfil{
+#perfil{ 
     overflow: auto;
     padding-right: 150px;
-    padding-bottom: 100px;
+    padding-bottom: 100px; 
 }
 
-.fundos_secoes{
-    background-color: #14213D;
-    color: #FFFFFF;
-    padding: 50px;
+.fundos_secoes{ 
+    background-color: #14213d;
+    color: #ffffff;
+    padding: 50px; 
 }
 
-.exceto_secoes{
+.exceto_secoes{ 
     margin: 15px;
-    border: 1px solid #FCA311;
+    border: 1px solid #fca311; 
 }
 
-#artigo{
+#artigo{ 
     text-align: center;
     overflow: auto;
     float: left;
     height: 120px;
-    max-width: 800px;
+    max-width: 800px; 
 }
 
-#aside_breve_passagem{
+#aside_breve_passagem{ 
     text-align: center;
     float: right;
     overflow: auto;
     height: 120px;
-    max-width: 250px;
+    max-width: 250px; 
 }
 
-.listas{
+.listas{ 
     text-decoration: none;
-    list-style: none;
+    list-style: none; 
 }
 
-.listas li{
-    display: inline-block;
+.listas li{ 
+    display: inline-block; 
 }
 
-#conteudo{
+#conteudo{ 
     position: relative;
-    top: 4.5em;
+    top: 4.5em; 
 }
 
-#navegacao{
-    background-color: #FCA311;
-    text-align: center;
+#navegacao{ 
+    background-color: #fca311;
+    text-align: center; 
 }
 
-#titulo{
+#titulo{ 
     text-align: start;
-    margin-left: 3em;
+    margin-left: 3em; 
 }
 
-#minha_foto{
+#minha_foto{ 
     height: 200px;
     object-fit: cover;
     width: 200px;
     border-radius: 100%;
-    background-color: #FCA311;
+    background-color: #fca311;
     padding: 2px;
     top: 1em;
     left: 5%;
-    position: relative;
+    position: relative; 
 }
 
-#licoes_aprendidas{
-    border-top: 1px solid #FCA311;
+#licoes_aprendidas{ 
+    border-top: 1px solid #fca311;
     left: 40px;
     position: relative;
-    top: 2em;
+    top: 2em; 
 }
 
-#licoes_a_aprender{
-    border-top: 1px solid #FCA311;
+#licoes_a_aprender{ 
+    border-top: 1px solid #fca311;
     left: 40px;
     position: relative;
-    top: 4em;
+    top: 4em; 
 }
 
-.cartao_apresentacao{
-    background-color: #E5E5E5;
-    color: #14213D;
+.cartao_apresentacao{ 
+    background-color: #e5e5e5;
+    color: #14213d;
     display: inline-block;
     width: 500px;
-    overflow: auto;
+    overflow: auto; 
 }
 
-#rodape{
+#rodape{ 
     clear: both;
     text-align: center;
-    background-color: #FCA311;
+    background-color: #fca311;
     position: relative;
-    top: 5em;
+    top: 5em; 
 }
 
-.links_logos{
+.links_logos{ 
     object-fit: cover;
-    padding: 10px;
+    padding: 10px; 
 }
 
-.style_link{
-    text-decoration: #FCA311;
-    color: #FCA311;
+.style_link{ 
+    text-decoration: #fca311;
+    color: #fca311; 
 }
 
-.style_link:hover{
-    color: #E5E5E5;
+.style_link:hover{ 
+    color: #e5e5e5; 
 }
