Correçao de identaçao no css

--- a/style.css
+++ b/style.css
@@ -1,130 +1,130 @@
 body{ 
-    background-color: rgb(253, 251, 251);
-    font-family: 'Montserrat', sans-serif;
-    font-size: 14px;
-    margin: 0;
-    color: black;
-    line-height: 20px; 
+  background-color: rgb(253, 251, 251);
+  font-family: Montserrat, sans-serif;
+  font-size: 14px;
+  margin: 0;
+  color: black;
+  line-height: 20px; 
 }
 
 #cabecalho{ 
-    position: fixed;
-    top: 0px;
-    height: 6em;
-    background-color: #fca311;
-    width: 100%;
-    z-index: 2; 
+  position: fixed;
+  top: 0px;
+  height: 6em;
+  background-color: #fca311;
+  width: 100%;
+  z-index: 2; 
 }
 
 #perfil{ 
-    overflow: auto;
-    padding-right: 150px;
-    padding-bottom: 100px; 
+  overflow: auto;
+  padding-right: 150px;
+  padding-bottom: 100px; 
 }
 
 .fundos_secoes{ 
-    background-color: #14213d;
-    color: #ffffff;
-    padding: 50px; 
+  background-color: #14213d;
+  color:white;
+  padding: 50px; 
 }
 
 .exceto_secoes{ 
-    margin: 15px;
-    border: 1px solid #fca311; 
+  margin: 15px;
+  border: 1px solid #fca311; 
 }
 
 #artigo{ 
-    text-align: center;
-    overflow: auto;
-    float: left;
-    height: 120px;
-    max-width: 800px; 
+  text-align: center;
+  overflow: auto;
+  float: left;
+  height: 120px;
+  max-width: 800px; 
 }
 
 #aside_breve_passagem{ 
-    text-align: center;
-    float: right;
-    overflow: auto;
-    height: 120px;
-    max-width: 250px; 
+  text-align: center;
+  float: right;
+  overflow: auto;
+  height: 120px;
+  max-width: 250px; 
 }
 
 .listas{ 
-    text-decoration: none;
-    list-style: none; 
+  text-decoration: none;
+  list-style: none; 
 }
 
 .listas li{ 
-    display: inline-block; 
+  display: inline-block; 
 }
 
 #conteudo{ 
-    position: relative;
-    top: 4.5em; 
+  position: relative;
+  top: 4.5em; 
 }
 
 #navegacao{ 
-    background-color: #fca311;
-    text-align: center; 
+  background-color: #fca311;
+  text-align: center; 
 }
 
 #titulo{ 
-    text-align: start;
-    margin-left: 3em; 
+  text-align: start;
+  margin-left: 3em; 
 }
 
 #minha_foto{ 
-    height: 200px;
-    object-fit: cover;
-    width: 200px;
-    border-radius: 100%;
-    background-color: #fca311;
-    padding: 2px;
-    top: 1em;
-    left: 5%;
-    position: relative; 
+  height: 200px;
+  object-fit: cover;
+  width: 200px;
+  border-radius: 100%;
+  background-color: #fca311;
+  padding: 2px;
+  top: 1em;
+  left: 5%;
+  position: relative; 
 }
 
 #licoes_aprendidas{ 
-    border-top: 1px solid #fca311;
-    left: 40px;
-    position: relative;
-    top: 2em; 
+  border-top: 1px solid #fca311;
+  left: 40px;
+  position: relative;
+  top: 2em; 
 }
 
 #licoes_a_aprender{ 
-    border-top: 1px solid #fca311;
-    left: 40px;
-    position: relative;
-    top: 4em; 
+  border-top: 1px solid #fca311;
+  left: 40px;
+  position: relative;
+  top: 4em; 
 }
 
 .cartao_apresentacao{ 
-    background-color: #e5e5e5;
-    color: #14213d;
-    display: inline-block;
-    width: 500px;
-    overflow: auto; 
+  background-color: #e5e5e5;
+  color: #14213d;
+  display: inline-block;
+  width: 500px;
+  overflow: auto; 
 }
 
 #rodape{ 
-    clear: both;
-    text-align: center;
-    background-color: #fca311;
-    position: relative;
-    top: 5em; 
+  clear: both;
+  text-align: center;
+  background-color: #fca311;
+  position: relative;
+  top: 5em; 
 }
 
 .links_logos{ 
-    object-fit: cover;
-    padding: 10px; 
+  object-fit: cover;
+  padding: 10px; 
 }
 
 .style_link{ 
-    text-decoration: #fca311;
-    color: #fca311; 
+  text-decoration: #fca311;
+  color: #fca311; 
 }
 
 .style_link:hover{ 
-    color: #e5e5e5; 
+  color: #e5e5e5; 
 }
