Adiciona rodape de acordo com o requisito 6 e linka redes sociais minhas nele

--- a/style.css
+++ b/style.css
@@ -38,3 +38,15 @@ body {
   font-family: sans-serif;
   margin-left: 80px;
 }
+
+#rodape {
+  bottom: 0;
+  position: fixed;
+  background-color: rgb(83 , 80 , 80);
+  right: 0;
+  left: 0;
+  font-family: sans-serif;
+  color: white;
+  padding: 15px;
+  text-align: center;
+}
